--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "Discord bot for mavericks reddit",
   "main": "mavsbot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node mavsbot"
   },
   "author": "Kyle Rump",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.1"
+    "axios": "^0.21.1",
+    "discord.js": "^12.5.1",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.5"
   }
 }
